@@ -1,5 +1,6 @@
-2018-01-XX Jan Kotanski <jan.kotanski@desy.de>
+2018-01-09 Jan Kotanski <jan.kotanski@desy.de>
 	* add loading image file
+	* add topic ComboBox for ZMQ Stream source
 	* statistics without scaling
 	* tagged as 0.8.0
 
